# mesos

./: CMakeLists.txt
cmake/: CompilationConfigure.cmake  MesosConfigure.cmake
docs/configuration/: cmake.md
site/source/blog/: 2018-09-05-mesoscon-2018-cfp-is-now-closed.md
src/: CMakeLists.txt
src/checks/: tcp_connect.cpp
src/cmake/: MesosProtobuf.cmake
src/common/: http.cpp
src/docker/: executor.cpp
src/examples/java/: TestLog.java
src/exec/: exec.cpp
src/health-check/: health_checker.cpp  tcp_connect.cpp
src/jvm/: jvm.hpp
src/jvm/org/apache/: zookeeper.hpp
src/launcher/: default_executor.cpp  executor.cpp  fetcher.cpp
src/launcher/windows/: executor.cpp
src/linux/: ns.cpp
src/linux/routing/link/: veth.cpp
src/log/: log.cpp
src/logging/: logging.cpp
src/master/cmake/: MasterSourceList.cmake
src/slave/: main.cpp  paths.cpp  state.cpp
src/slave/cmake/: AgentConfigure.cmake  AgentSourceList.cmake
src/slave/container_loggers/: CMakeLists.txt
src/slave/containerizer/: containerizer.cpp  docker.cpp  fetcher.cpp
src/slave/containerizer/mesos/: CMakeLists.txt  containerizer.cpp  launch.cpp  launcher.cpp  main.cpp  paths.cpp  paths.hpp  utils.hpp  windows_launcher.cpp  windows_launcher.hpp
src/slave/containerizer/mesos/io/: switchboard.cpp  switchboard.hpp  switchboard_main.cpp
src/slave/containerizer/mesos/isolators/network/cni/: cni.cpp
src/slave/containerizer/mesos/isolators/volume/: sandbox_path.cpp
src/slave/containerizer/mesos/provisioner/: utils.cpp
src/slave/containerizer/mesos/provisioner/backends/: copy.cpp
src/slave/qos_controllers/: CMakeLists.txt
src/status_update_manager/: status_update_manager_process.hpp
src/tests/: CMakeLists.txt  api_tests.cpp  check_tests.cpp  command_executor_tests.cpp  default_executor_tests.cpp  environment.cpp  exception_tests.cpp  gc_tests.cpp  health_check_tests.cpp  master_tests.cpp  master_validation_tests.cpp  mesos.hpp  paths_tests.cpp  slave_authorization_tests.cpp  slave_recovery_tests.cpp  slave_tests.cpp  upgrade_tests.cpp  zookeeper.cpp  zookeeper_test_server.cpp
src/tests/containerizer/: capabilities_test_helper.cpp  cgroups_tests.cpp  io_switchboard_tests.cpp  isolator_tests.cpp  ns_tests.cpp  ports_isolator_tests.cpp  volume_host_path_isolator_tests.cpp
src/uri/fetchers/: copy.cpp
src/zookeeper/: group.cpp
support/: apply-reviews.py  docker-build.sh  mesos-split.py  post-reviews.py  push-commits.py  verify-reviews.py
